--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@duckdb/duckdb-wasm": "^1.30.0",
     "@loaders.gl/core": "^4.3.4",
     "deck.gl": "^9.2.2",
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "vite-plugin-wasm": "^3.5.0"
